--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <label for="floatingPassword">Password</label>
                         </div>
                         <div class="mt-3">
-                            <button class="btn primaryBg text-white">Login</button>
+                            <button class="btn primaryBg text-white" id="login">Login</button>
                         </div>
                     </form>
                     <div class="mt-3">
@@ -37,5 +37,10 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="src/scripts/script.js"></script>
+    <script>
+        pages.loadFor("index")
+    </script> 
 </body>
 </html>
