--- a/register.html
+++ b/register.html
@@ -47,5 +47,10 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="src/scripts/script.js"></script>
+    <script>
+        pages.loadFor("register")
+    </script> 
 </body>
 </html>
