--- a/register.html
+++ b/register.html
@@ -18,33 +18,40 @@
                     <form action="">
                         <div class="row">
                         <div class="col-md-6 form-floating mb-3">
-                            <input type="text" class="form-control form-control-sm" placeholder="First Name" id="floatingInput">
-                            <label for="floatingInput">First Name</label>
+                            <input type="text" class="form-control form-control-sm" placeholder="First Name" id="first_name">
+                            <label for="first_name">First Name</label>
                         </div>
                         <div class="col-md-6 form-floating mb-3">
-                            <input type="text" class="form-control form-control-sm" placeholder="Last Name" id="floatingInput">
-                            <label for="floatingInput">Last Name</label>
+                            <input type="text" class="form-control form-control-sm" placeholder="Last Name" id="last_name">
+                            <label for="last_name">Last Name</label>
                         </div>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control form-control-sm" placeholder="Username" id="floatingInput">
-                            <label for="floatingPassword">Username</label>
+                            <input type="text" class="form-control form-control-sm" placeholder="Username" id="username">
+                            <label for="username">Username</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control form-control-sm" placeholder="Password" id="floatingPassword">
-                            <label for="floatingPassword">Password</label>
+                            <input type="password" class="form-control form-control-sm" placeholder="Password" id="password">
+                            <label for="password">Password</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control form-control-sm" placeholder="Confirm Password" id="floatingPassword">
-                            <label for="floatingPassword">Confirm Password</label>
+                            <input type="password" class="form-control form-control-sm" placeholder="Confirm Password" id="confirm">
+                            <label for="confirm">Confirm Password</label>
                         </div>
                         <div class="mt-3">
-                            <button class="btn primaryBg text-white">Login</button>
+                            <input type="button" class="form-control primaryBg text-white" id="login" value="login">
+                            <a href="result.html" class="link" id="linking"></a>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="window-alert" id="alert">
+        <div class="alerting" id="alert-text"></div>
+    </div>
+    
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
