--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
                     </div>
                     <form action="">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control form-control-sm" placeholder="Username" id="floatingInput">
-                            <label for="floatingInput">Username</label>
+                            <input type="text" class="form-control form-control-sm" placeholder="Username" id="login-username">
+                            <label for="login-username">Username</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control form-control-sm" placeholder="Password" id="floatingPassword">
-                            <label for="floatingPassword">Password</label>
+                            <input type="password" class="form-control form-control-sm" placeholder="Password" id="login-password">
+                            <label for="login-password">Password</label>
                         </div>
                         <div class="mt-3">
-                            <button class="btn primaryBg text-white" id="login">Login</button>
+                            <input type="button" class="form-control primaryBg text-white" id="btn-login" value="login">
+                            <a href="result.html" class="link" id="link-login"></a>
                         </div>
                     </form>
                     <div class="mt-3">
